changes made to boiler

--- a/src/css/styles2.css
+++ b/src/css/styles2.css
@@ -47,3 +47,12 @@ h1 {
 .nav__links li a:hover {
     color: #0088a9;  
 }
+
+.hero {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 2.5rem;
+    max-width: 68.75rem;
+    margin: auto;
+}
