skills section added

--- a/src/css/styles2.css
+++ b/src/css/styles2.css
@@ -1,21 +1,40 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
+:root {
+    --bg-color: #fcfcfc;
+    --primary-color: #4756df;
+    --secondary-color: #ff7235;
+    --primary-shadow: #8b8eaf;
+    --secondary-shadow: #a17a69;
+    --bottom-margin: 0.5rem;
+    --bottom-margin-2: 1rem;
+    --line-height: 1.7rem;
+    --transition: 0.3s;
+  }
+
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    background-color: #24252a
+    background-color: #ffffff
 }
 
 nav {
     padding: 1.5rem;
+    box-shadow: 0 3px;
+}
+
+h1 {
+    color: #30d5c8;
+    font-family: "Open Sans", sans-serif;
+    margin-right: auto;
 }
 
 li, a, button {
     font-family: "Open Sans", sans-serif;
     font-weight: 500;
     font-size: 16px;
-    color: #edf0f1;
+    color: #36454f;
     text-decoration: none;
 }
 
@@ -24,10 +43,6 @@ header {
     justify-content: flex-end;
     align-items: center;
     padding: 30px 10%;
-}
-
-h1 {
-    margin-right: auto;
 }
 
 .nav__links {
@@ -55,4 +70,20 @@ h1 {
     gap: 2.5rem;
     max-width: 68.75rem;
     margin: auto;
+}
+
+.bio {
+    width: 25rem;
+    padding: 0.625rem;
+    border-radius: 6px;
+    box-shadow: 0px 2px 15px 2px #8b8eaf
+}
+
+.bio h1 {
+    margin-bottom: var(--bottom-margin);
+}
+
+.bio p {
+    line-height: var(--line-height);
+    padding: 0.3rem 0;
 }
