--- a/src/css/styles2.css
+++ b/src/css/styles2.css
@@ -1,8 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
 :root {
+    --font-family: "Open Sans", sans-serf;
+    --normal-font: 400;
+    --bold-font: 700;
+    --bolder-font: 900;
     --bg-color: #fcfcfc;
-    --primary-color: #4756df;
+    --primary-color: #35b5ac;
     --secondary-color: #ff7235;
     --primary-shadow: #8b8eaf;
     --secondary-shadow: #a17a69;
@@ -12,6 +16,73 @@
     --transition: 0.3s;
   }
 
+
+
+
+html {
+    scroll-behavior: smooth;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
+  ul {
+    list-style-type: none;
+  }
+  
+  a {
+    text-decoration: none;
+    color: var(--primary-color);
+  }
+  
+  a:hover {
+    color: var(--secondary-color);
+  }
+  
+  body {
+    font-family: var(--font-family);
+  }
+
+  nav {
+    position: sticky;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1.5rem 3.5rem;
+    background-color: var(--bg-color);
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
+  }
+
+  nav h1 {
+    color: var(--primary-color);
+  }
+  
+  nav a {
+    color: var(--primary-color);
+    transition: var(--transition);
+  }
+  nav a:hover {
+    color: var(--secondary-color);
+    border-bottom: 2px solid var(--secondary-color);
+  }
+  
+  nav ul {
+    display: flex;
+    gap: 1.9rem;
+  }
+  
+  nav ul li {
+    font-weight: var(--bold-font);
+  }
+
+
+/*
 * {
     box-sizing: border-box;
     margin: 0;
@@ -24,7 +95,7 @@ nav {
     box-shadow: 0 3px;
 }
 
-h1 {
+nav h1 {
     color: #30d5c8;
     font-family: "Open Sans", sans-serif;
     margin-right: auto;
@@ -61,7 +132,7 @@ header {
 
 .nav__links li a:hover {
     color: #0088a9;  
-}
+} */
 
 .hero {
     display: flex;
@@ -86,4 +157,66 @@ header {
 .bio p {
     line-height: var(--line-height);
     padding: 0.3rem 0;
+}
+
+.more-about {
+    background-color: var(--bg-color);
+    padding: 1rem 6rem;
+  }
+  
+  .more-about h2 {
+    margin-bottom: var(--bottom-margin);
+    text-align: center;
+    font-family: "Open Sans", sans-serif;
+    font-weight: bold;
+  }
+  
+  .more-about p {
+    line-height: var(--line-height);
+    padding: 0.4rem;
+  }
+
+.programming-skills {
+    max-width: 68.75rem;
+    margin: auto;
+    text-align: center;
+    margin-top: 2.5rem;
+}
+
+.programming-skills h2 {
+    font-family: "Open Sans", sans-serif;
+    font-weight: 900;
+}
+
+.skill-header {
+    margin-bottom: 1rem;
+  }
+  
+  .skills-wrapper img {
+    padding: 1.25rem;
+  }
+  
+  .icon {
+    width: 18rem;
+    height: 18rem;
+  }
+
+  .icon-card {
+      background-color: #fff;
+      border-radius: 11px;
+      box-shadow: 0 3px 10px var(--secondary-shadow);
+      padding: 20px;
+      margin: 10px;
+  }
+
+  .software-skills {
+    max-width: 68.75rem;
+    margin: auto;
+    text-align: center;
+    margin-top: 2.5rem;
+}
+
+.software-skills h2 {
+    font-family: "Open Sans", sans-serif;
+    font-weight: 900;
 }
