--- a/src/css/styles2.css
+++ b/src/css/styles2.css
@@ -38,7 +38,7 @@ html {
     color: var(--primary-color);
   }
   
-  a:hover {
+  nav a:hover {
     color: var(--secondary-color);
   }
   
@@ -143,6 +143,11 @@ header {
     margin: auto;
 }
 
+.hero img {
+  height: 20rem;
+  width: 20rem;
+}
+
 .bio {
     width: 25rem;
     padding: 0.625rem;
@@ -197,8 +202,8 @@ header {
   }
   
   .icon {
-    width: 18rem;
-    height: 18rem;
+    width: 12rem;
+    height: 12rem;
   }
 
   .icon-card {
@@ -219,4 +224,80 @@ header {
 .software-skills h2 {
     font-family: "Open Sans", sans-serif;
     font-weight: 900;
+}
+
+.job-experience {
+  max-width: 68.75rem;
+  margin: auto;
+  text-align: center;
+  margin-top: 2.5rem;
+}
+
+.job-experience h2 {
+  font-family: "Open Sans", sans-serif;
+  font-weight: 900;
+}
+
+
+.socials {
+  max-width: 68.75rem;
+  margin: auto;
+  text-align: center;
+  margin-top: 2.5rem;
+}
+.socials h2 {
+  font-family: "Open Sans", sans-serif;
+  font-weight: 900;
+}
+
+.socials li {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+  display: inline;
+  margin: 10px 5px;
+}
+
+.socials li a {
+  padding: 25px;
+  font-size: 45px;
+  border-radius: 50%;
+  margin: 10px 10px;
+}
+
+.socials li a:hover {
+  opacity: 0.7;
+}
+
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
+
+.fa-linkedin {
+  background: #007bb5;
+  color: white;
+}
+
+.fa-instagram {
+  background: #833ab4;
+  color: white;
+}
+
+.fa-snapchat-ghost {
+  background: #fffc00;
+  color: white;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+
+.fa-github {
+  background: black;
+  color: white;
+}
+
+.fa-spotify {
+  color: #1db954;
+  background: black;
 }
