--- a/css/styles2.css
+++ b/css/styles2.css
@@ -293,5 +293,16 @@ html {
   margin-bottom: 2rem;
 }
 
+.project h4 {
+  font-weight: 400;
+  margin-top: .35rem;
+  font-size: 800;
+}
 
 
+
+.job h4 {
+  font-weight: 400;
+  margin-top: .35rem;
+  font-size: 800;
+}
